@@ -1,4 +1,4 @@
-#	$NetBSD: files.spi,v 1.3 2014/02/25 20:09:37 rkujawa Exp $
+#	$NetBSD: files.spi,v 1.4 2014/04/06 17:59:39 kardel Exp $
 
 define	spibus { }
 
@@ -31,3 +31,7 @@ device	mcp48x1dac
 attach	mcp48x1dac at spi
 file	dev/spi/mcp48x1.c		mcp48x1dac	
 
+# MCP23S17 16-bit GPIO
+device	mcp23s17gpio: gpiobus
+attach	mcp23s17gpio at spi
+file	dev/spi/mcp23s17.c		mcp23s17gpio
